--- a/family-tips-tricks.html
+++ b/family-tips-tricks.html
@@ -39,7 +39,7 @@
 				<ul class="breadcrumb">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="#">Family Fun</a></li>
-					<li><a href="#" class="active">Tips and Tricks</a></li>
+					<li class="active">Tips and Tricks</li>
 				</ul>
 				<div class="intro row">
 					<header class="col-xs-6 col-lg-9">
