--- a/products-buddig-original.html
+++ b/products-buddig-original.html
@@ -48,7 +48,7 @@
 						<li><a href="#">Home</a></li>
 						<li><a href="#">Products</a></li>
 						<li><a href="#">All Products</a></li>
-						<li><a href="#" class="active">Buddig Original</a></li>
+						<li class="active">Buddig Original</li>
 					</ul>
 					<div>
 						<img src="img/bdg-original-group.jpg" alt="PHOTO: Buddig Products" class="prod-photo">
