--- a/products-detail.html
+++ b/products-detail.html
@@ -42,7 +42,7 @@
 					<li><a href="#">Home</a></li>
 					<li><a href="#">Products</a></li>
 					<li><a href="#">Original</a></li>
-					<li><a href="#" class="active">Beef</a></li>
+					<li class="active">Beef</li>
 				</ul>
 				<div class="display col-xs-6 col-md-6 col-lg-4">
 					<div class="slide">
