--- a/recipes-detail.html
+++ b/recipes-detail.html
@@ -35,8 +35,8 @@
 	<div class="container">
 		<main>
 			<div class="recipe-info row">
-				<figure class="col-xs-12  col-md-8"></figure>
-				<div class="recipe-details col-xs-12 col-md-4">
+				<figure class="col-xs-12  col-lg-8"></figure>
+				<div class="recipe-details col-xs-12 col-lg-4">
 					<h2>Denver Omelette Stuffing Cups</h2>
 					<div id="tabs">
 						<ul class="tabs-nav">
