--- a/recipes.html
+++ b/recipes.html
@@ -140,7 +140,7 @@
 				<ul class="breadcrumb">
 					<li><a href="#">Home</a></li>
 					<li><a href="#">Recipes</a></li>
-					<li><a href="#" class="active">All Recipes</a></li>
+					<li class="active">All Recipes</li>
 				</ul>
 				<div class="row recipe-features">
 					<div class="col-sm-6 col-md-6"><img src="img/recipe-featured.jpg"></div>
