--- a/products.html
+++ b/products.html
@@ -39,7 +39,7 @@
 					<ul class="breadcrumb">
 						<li><a href="index.html">Home</a></li>
 						<li><a href="#">Products</a></li>
-						<li><a href="products.html" class="active">All Products</a></li>
+						<li class="active">All Products</a></li>
 					</ul>
 					<div class="hero-text">
 						<h2>We Want You to Feel Good About Your Food.</h2>
