--- a/index.html
+++ b/index.html
@@ -126,6 +126,46 @@
 			<!-- End Nav -->
 			<!-- Start Mobile Nav -->
 			<div class="nav-icon"><i class="fa fa-bars"></i></div>
+			<div class="mobile-nav">
+				<ul>
+					<li><a href="#">About Us</a>
+						<ul>
+							<li><a href="#">Our Story</a></li>
+							<li><a href="#">Giving Back</a></li>
+							<li><a href="#">Partnerships</a></li>
+							<li><a href="#">News</a></li>
+						</ul>
+					</li>
+					<li><a href="#">Recipes</a>
+						<ul>
+							<li><a href="#">All Recipes</a></li>
+							<li><a href="#">Share Your Recipes</a></li>
+						</ul>
+					</li>
+					<li><a href="#">Products</a>
+						<ul>
+							<li><a href="#">All Products</a></li>
+							<li><a href="#">Buddig Original</a></li>
+							<li><a href="#">Premium Deli</a></li>
+							<li><a href="#">Fix Quix</a></li>
+							<li><a href="#">Old Wisconsin</a></li>
+							<li><a href="#">Find A Store</a></li>
+						</ul>
+					</li>
+					<li><a href="#">Family Fun</a>
+						<ul>
+							<li><a href="#">Tips & Tricks</a></li>
+							<li><a href="#">Buddi's Corner</a></li>
+						</ul>
+					</li>
+					<li><a href="#">Connect</a>
+						<ul>
+							<li><a href="#">Contact Us</a></li>
+							<li><a href="#">Buddig Lunch Club</a></li>
+						</ul>
+					</li>
+				</ul>
+			</div>
 			<!-- End Mobile Nav -->
 		</div>
 	</header> <!-- End Navbar -->
